--- a/Project/97CAR-Android/description.html
+++ b/Project/97CAR-Android/description.html
@@ -108,146 +108,187 @@
                             <a href="description.html" class="active">Description du Projet</a>
                             <a href="https://drive.google.com/drive/folders/1HrRIyYcViirmG8gALrL6aYp5VqbufQHL?dmr=1&ec=wgc-drive-globalnav-goto"
                                 target="_blank" target="_blank">Documentation</a>
-                            <a href="https://github.com/lmoutanin/API-97CAR" target="_blank">GitHub</a>
+                            <a href="https://drive.google.com/drive/folders/1rx0DHl0tsnJXClETdj8UpaxiPUD2Bx4I?usp=sharing"
+                                target="_blank">Documentation Technique</a>
+                            <a href="github.html"  >GitHub</a>
                         </div>
 
                     </div>
 
 
                     <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-                        <center> <img src="../../assets/project/img/logo_97car.png" class="glightbox preview-link"
-                                alt="" class="img-fluid services-img"></center>
-                        <br>
+                        <img src="../../assets/project/img/logo_97car.png" class="glightbox preview-link" alt=""
+                            class="img-fluid services-img">
+                        <br><br>
+
                         <center>
                             <h2><strong>Description du projet</strong></h2>
-                        </center>
-                        <br>
-
-
-                        <p>
-                            Dans ce projet, une interface d'authentification a été mise en place avec Symfony pour
-                            permettre aux utilisateurs de se connecter à l'interface d'administration du garage et
-                            d'accéder aux outils disponibles.​
-                        </p><br>
-
-
-
-                        <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 160345.png"
-                                width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
                         </center>
 
                         <br><br>
 
 
-                        <h4>Dans le cadre du projet 97CAR, quatre outils principaux ont été développés pour faciliter la
-                            gestion quotidienne du garage : </h4><br>
-
-                        <h3>1. Client </h3>
-                        <p>Cette interface permet l'enregistrement et le suivi des informations des clients.​</p>
-
-                        <center> <img src="../../assets/project/97car-symfony/client-1.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/client-2 (2).png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
+                        <p>
+                            Le diagramme de cas d’utilisation ci-dessous illustre les principales fonctionnalités de
+                            l’application CarSlim dans le cadre du projet. Il met en évidence à la fois les
+                            fonctionnalités initialement disponibles, telles que la gestion des clients et des factures,
+                            et celles que j’ai ajoutées ou améliorées. Cela comprend l’intégration complète de la
+                            gestion des véhicules (ajout, consultation, modification, suppression), l’enrichissement des
+                            écrans de consultation des clients et des factures, ainsi que l’implémentation des
+                            opérations d’ajout, de modification et de suppression pour les clients, en réponse aux
+                            besoins exprimés dans le cahier des charges.
+                        </p> <br>
 
 
-                        <center> <img src="../../assets/project/97car-symfony/client4.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
+                        <center>
+                            <img src="../../assets/project/97car-android/diagramme de cas utilisation android.png"
+                                width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
 
-
-                        <center> <img src="../../assets/project/97car-symfony/client5.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br><br>
-
-                        <h3>2. Voiture </h3>
-                        <p>Cette interface permet de gère les détails des véhicules, y compris leur association avec les
-                            clients.​</p>
-
-                        <center> <img src="../../assets/project/97car-symfony/voiture.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/voiture2.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/voiture3.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/voiture5.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/voiture4.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <h3>3. Réparation </h3>
-                        <p>Cette interface permet d'enregistre les interventions réalisées sur les véhicules, avec les
-                            détails correspondants.​​</p>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation2.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation3 (2).png" width="700"
-                                height="200" class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation4.png" width="700" height="200"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <h3>4. Facture </h3>
-                        <p>Cette interface permet de génère et archive les factures liées aux interventions effectuées.​
+                        </center>
+                        <br>
+                        <p>
+                            Dans le cadre de mon projet, cette section présente l’interface de l’application CarSlim à
+                            travers une série de captures d’écran, illustrant les fonctionnalités initialement
+                            disponibles, ainsi que celles que j’ai ajoutées ou modifiées pour répondre aux objectifs du
+                            projet.
                         </p>
 
+                        <center>
+                            <h2>1.<strong> Clients</strong></h2> <br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture.png" width="700" height="350"
+                            <h4>Liste des clients enregistrés </h4>
+                            <p> Affiche la liste complète des clients enregistrés dans le système. ​</p>
+
+                            <p><strong>Routes associées : </strong> GET /clients </p>
+
+                            <img src="../../assets/project/97car-android/projet/clientList.png" width="350" height="450"
                                 class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
+                            <br><br> <br><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture2.png" width="700" height="220"
+
+                            <h4>Ajout d’un nouveau client</h4>
+                            <p>Permet de créer un nouveau client via un formulaire. ​</p>
+
+                            <p><strong>Routes associées : </strong> POST /clients </p>
+
+                            <img src="../../assets/project/97car-android/projet/menu.png" width="350" height="450"
                                 class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture2.png" width="700" height="220"
+                            <img src="../../assets/project/97car-android/projet/clientAdd1.png" width="350" height="450"
                                 class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
+                            <br><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture3.png" width="700" height="220"
+                            <img src="../../assets/project/97car-android/projet/clientAdd2.png" width="350" height="450"
                                 class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
+                            <br><br> <br><br>
+                            <h4>Détail d’un client</h4>
+                            <p>Affiche les informations détaillées d’un client spécifique. ​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture4.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
+                            <p><strong>Routes associées : </strong> GET /clients/{id}</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture5.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br><br>
+                            <img src="../../assets/project/97car-android/projet/clientDetail1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+
+                            <img src="../../assets/project/97car-android/projet/clientDetail2.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+                            <br><br> <br><br>
 
 
-                        <h3>Autre</h3>
-                        <p>Dans ce projet, un système de déconnexion a été mis en place avec Symfony pour permettre aux
-                            utilisateurs de se déconnecter de l'interface d'administration du garage. Cette
-                            fonctionnalité assure la sécurité en mettant fin à la session active, empêchant ainsi tout
-                            accès non autorisé aux outils de gestion.</p>
-                        <center> <img src="../../assets/project/97car-symfony/deco.png" width="700" height="120"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br><br>
+                            <h4>Modification d’un client</h4>
+                            <p>Permet de modifier les informations d’un client existant. ​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 160345.png"
-                                width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
+                            <p><strong>Routes associées : </strong> PUT /putclients/{id}</p>
+
+                            <img src="../../assets/project/97car-android/projet/clientEdit1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+
+                            <img src="../../assets/project/97car-android/projet/clientEdit2.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+                            <br><br>
+
+                            <img src="../../assets/project/97car-android/projet/clientEdit3.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+                            <br><br> <br><br>
+
+                            <h4>Suppression d’un client</h4>
+                            <p>Permet de supprimer un client du système. ​</p>
+
+                            <p><strong>Routes associées : </strong> DELETE /dropclients/{id}</p>
+
+                            <img src="../../assets/project/97car-android/projet/clientDelete1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+
+                            <img src="../../assets/project/97car-android/projet/clientDelete2.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+                            <br><br> <br><br>
+
+
+
+
+                            <h2>2.<strong> Voitures</strong></h2> <br><br>
+
+                            <h4>Ajout d’une nouvelle voiture</h4>
+                            <p>Permet d’enregistrer une nouvelle voiture associée à un client. ​</p>
+
+                            <p><strong>Routes associées : </strong> POST /voitures</p>
+
+                            <img src="../../assets/project/97car-android/projet/voitureAdd1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img"> <br><br>
+                            <br><br>
+
+                            <h4>Détail d’une voiture</h4>
+                            <p>Affiche les détails d’une voiture spécifique. ​</p>
+
+                            <p><strong>Routes associées : </strong> GET /voitures/{id}</p>
+
+                            <img src="../../assets/project/97car-android/projet/voitureAdd1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img"> <br><br>
+                            <br><br>
+
+                            <h4>Modification d’une voiture</h4>
+                            <p>Permet de modifier les informations d’une voiture existante. ​</p>
+
+                            <p><strong>Routes associées : </strong> PUT /voitures/{id}</p>
+
+                            <img src="../../assets/project/97car-android/projet/voitureEdit1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+
+                            <img src="../../assets/project/97car-android/projet/voitureEdit2.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img"> <br><br>
+
+                            <img src="../../assets/project/97car-android/projet/voitureEdit3.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img"> <br><br>
+                            <br><br>
+
+                            <h4>Suppression d’une voiture</h4>
+                            <p>Permet de supprimer une voiture du système. ​</p>
+
+                            <p><strong>Routes associées : </strong> DELETE /voitures/{id}</p>
+
+                            <img src="../../assets/project/97car-android/projet/voitureDelete1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+                            <img src="../../assets/project/97car-android/projet/voitureDelete2.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img"><br><br>
+
+
+
+
+                            <br><br>
+
+
+                            <h2>3.<strong> Factures</strong></h2> <br>
+
+
+                            <h4>Détail d’une facture</h4>
+                            <p>Affiche les informations détaillées d’une facture spécifique. ​</p>
+
+                            <p><strong>Routes associées : </strong> DGET /factures/{id}</p>
+
+                            <img src="../../assets/project/97car-android/projet/factureDetail1.png" width="350"
+                                height="450" class="glightbox preview-link" class="img-fluid services-img">
+
+
+
                         </center>
 
                     </div>
