--- a/Project/97CAR-Android/gestion.html
+++ b/Project/97CAR-Android/gestion.html
@@ -106,7 +106,10 @@
                             <a href="description.html">Description du Projet</a>
                             <a href="https://drive.google.com/drive/folders/1HrRIyYcViirmG8gALrL6aYp5VqbufQHL?dmr=1&ec=wgc-drive-globalnav-goto"
                                 target="_blank">Documentation</a>
-                            <a href="https://github.com/lmoutanin/API-97CAR" target="_blank">GitHub</a>
+    <a href="https://drive.google.com/drive/folders/1rx0DHl0tsnJXClETdj8UpaxiPUD2Bx4I?usp=sharing"
+                                target="_blank">Documentation Technique</a>
+                                
+                            <a href="github.html" target="_blank">GitHub</a>
                         </div>
 
                     </div>
@@ -129,20 +132,25 @@
                         </p><br>
 
 
-                        <center> <img src="../../assets/project/97car-android/trello.png" class="glightbox preview-link"
+                        <center> <img src="../../assets/project/97car-android/projet-1.png" class="glightbox preview-link"
+                                width="700" height="350" class="img-fluid services-img">
+                        </center>
+                        <br>
+                        <center> <img src="../../assets/project/97car-android/projet-2.png" class="glightbox preview-link"
                                 width="700" height="350" class="img-fluid services-img">
                         </center>
                         <br>
 
                         <h4>Outils utilisés</h4>
                         <ul>
-                            <li><i class="bi bi-arrow-right"></i> <span>Google Drive : stockage et partage des
+                            <li><i class="bi bi-arrow-right"></i> <span><strong>Google Drive :</strong> stockage et partage des
                                     documents de
                                     travail, cahier des charges, documentation technique, comptes-rendus, etc.</span>
                             </li>
-                            <li><i class="bi bi-arrow-right"></i> <span>GitHub : versionnage du code et hébergement du
+                            <li><i class="bi bi-arrow-right"></i> <span><strong>GitHub :</strong> versionnage du code et hébergement du
                                     dépôt, accessible
                                     à tous les membres de l’équipe.</span></li>
+                                     <li><i class="bi bi-arrow-right"></i> <span> <strong>Trello :</strong> gestion des tâches et du planning via des tableaux Kanban. Suivi de l’avancement, attribution des cartes, et organisation des sprints.</span></li>
                         </ul> <br>
 
 
