update ap 97car symfony

--- a/Project/97CAR-Symfony/bdd.html
+++ b/Project/97CAR-Symfony/bdd.html
@@ -105,6 +105,8 @@
               <a href="description.html">Description du Projet</a>
               <a href="https://spectacled-chicory-108.notion.site/f15a09e153d84705b8c5b7098e520efb?v=10b119315e87804691ab000c27b50df8&p=13c119315e878078b0c7c2fd04ecfa75&pm=s"
                 target="_blank" target="_blank">Documentation</a>
+                 <a href="../../assets/project/97car-symfony/Documentation Technique Application de Gestion de Réparations.pdf"
+                target="_blank" target="_blank">Documentation Technique</a>
               <a href="https://github.com/lmoutanin/97CAR-Symfony" target="_blank">GitHub</a>
             </div>
 
@@ -132,13 +134,22 @@
 
             <h3> Modèle Relationnel : </h3>
             <br>
-            <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 145241.png" width="700"
+             <center> <img src="../../assets/project/97car-symfony/modele relationelle.png" width="700"
+                height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
+            <br>
+            <center> <img src="../../assets/project/97car-symfony/bdd-table.png" width="700"
                 height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
 
             <br>
 
-            <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 145549.png" width="700"
+            <center> <img src="../../assets/project/97car-symfony/bdd-relation.png" width="700"
                 height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
+
+            <br> 
+             <h3> Diagramme de classes UML : </h3> <br>
+
+            <center> <img src="../../assets/project/97car-symfony/diagramme de classe.png" width="700" height="350"
+                class="glightbox preview-link" class="img-fluid services-img"></center>
 
             <br><br>
 
