--- a/Project/97CAR-Symfony/description.html
+++ b/Project/97CAR-Symfony/description.html
@@ -60,7 +60,7 @@
                     <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
                             target="_blank">Documentation</a></li>
 
-                            
+
                     <li><a href="../../veille.html">Veille</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -108,6 +108,8 @@
                             <a href="description.html" class="active">Description du Projet</a>
                             <a href="https://spectacled-chicory-108.notion.site/f15a09e153d84705b8c5b7098e520efb?v=10b119315e87804691ab000c27b50df8&p=13c119315e878078b0c7c2fd04ecfa75&pm=s"
                                 target="_blank" target="_blank">Documentation</a>
+                                <a href="../../assets/project/97car-symfony/Documentation Technique Application de Gestion de Réparations.pdf"
+                target="_blank" target="_blank">Documentation Technique</a>
                             <a href="https://github.com/lmoutanin/97CAR-Symfony" target="_blank">GitHub</a>
                         </div>
 
@@ -124,18 +126,22 @@
                         <br>
 
 
+
                         <p>
-                            Dans ce projet, une interface d'authentification a été mise en place avec Symfony pour
-                            permettre aux utilisateurs de se connecter à l'interface d'administration du garage et
-                            d'accéder aux outils disponibles.​
-                        </p><br>
+                            Le diagramme de cas d’utilisation ci-dessous illustre les principales fonctionnalités de
+                            l’application 97CAR dans le cadre du projet. Il met en évidence les fonctionnalités
+                            implémenter pour Administration du système telles que la gestion des clients , voitures ,
+                            factures et réparations .Ils
+                            permettent de faire des opérations CRUD.
+
+                        </p> <br>
 
 
-
-                        <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 160345.png"
+                        <center>
+                            <img src="../../assets/project/97car-symfony/diagramme de cas utilisation symfony.png"
                                 width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
-                        </center>
 
+                        </center>
                         <br><br>
 
 
