update edit option by cda

--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>MOUTANIN LUC</h2>
         <p>Je suis <span class="typed" data-typed-items=" 
-          ÉTUDIANT EN BTS SIO OPTION SLAM.,
-          PASSIONNÉ PAR LE DÉVELOPPEMENT WEB ET APPLICATIF.,
-          DÉVELOPPEUR EN FORMATION DÉTERMINÉ À PROGRESSER CHAQUE JOUR.,
-          CURIEUX MOTIVÉ ET TOUJOURS PRÊT À RELEVER DE NOUVEAUX DÉFIS.
+          DÉVELOPPEUR EN FORMATION BAC+4 – CDA.,
+          DIPLÔMÉ DU BTS SIO OPTION SLAM.,
+          PASSIONNÉ PAR LE DÉVELOPPEMENT WEB ET LOGICIEL.,
+          EN RECHERCHE D’UNE ALTERNANCE DÈS SEPTEMBRE 2025.,
+          CURIEUX, RIGOUREUX ET PRÊT À CONTRIBUER À DES PROJETS CONCRETS.
 
 
           
