--- a/profil.html
+++ b/profil.html
@@ -107,26 +107,29 @@
             <div class="col-lg-8 content">
 
               <p class="fst-italic py-3">
-                Je m'appelle MOUTANIN Luc et je suis actuellement en deuxième année de BTS SIO, spécialité SLAM
-                (Solutions
-                Logicielles et Applications Métiers).
+                Je m'appelle Luc MOUTANIN, développeur en devenir, passionné par la création de solutions web et
+                logicielles.
 
-                Depuis toujours, l’informatique m’attire par sa capacité à transformer des idées abstraites en solutions
-                concrètes, utiles et durables. Ce domaine représente pour moi bien plus qu’une formation : c’est un
-                espace
-                de création, de logique et d’apprentissage perpétuel.
+                Diplômé d’un BTS SIO – spécialité SLAM, j’ai appris à transformer des idées en applications utiles,
+                performantes et bien structurées.
 
-                À travers ce portfolio, je vous invite à découvrir mon cheminement, mes acquis, mais aussi ma vision :
-                celle d’un développeur en devenir, curieux, rigoureux et animé par le désir de contribuer à des projets
-                porteurs de sens.
-                Chaque ligne de code, chaque projet réalisé est une pierre ajoutée à l’édifice de mon avenir
-                professionnel.
+                Actuellement en formation Concepteur Développeur d’Applications (Bac+4), je suis à la recherche d’une
+                alternance à partir de octobre 2025.
+
+                Mon objectif : mettre mes compétences au service d’une entreprise ambitieuse, apprendre de ses méthodes,
+                et contribuer concrètement à ses projets.
+
+                Curieux, rigoureux et impliqué, je vois chaque ligne de code comme une opportunité d’apprendre,
+                d’innover et de progresser.
+
+                À travers ce portfolio, je vous invite à découvrir mon parcours, mes projets et ma vision du métier de
+                développeur.
               </p>
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Spécialité</strong> <span> Développement
-                        (SLAM)</span>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Spécialité:</strong> <span> Développement Informatique
+                         </span>
                     </li>
                     <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span><a
                           href="https://github.com/lmoutanin"> lmoutanin</a></span></li>
@@ -141,7 +144,7 @@
 
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>luc.moutanin@gmail.com</span>
                     </li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Niveau d’études</strong> <span>2ᵉ année de BTS SIO –
+                    <li><i class="bi bi-chevron-right"></i> <strong>Niveau d’études</strong> <span>  BTS SIO –
                         option SLAM</span></li>
                   </ul>
                 </div>
@@ -204,6 +207,16 @@
               </div>
             </div><!-- End Skills Item -->
 
+            <div class="progress">
+              <span class="skill"><span>Kotlin</span> <i class="val">65%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div><!-- End Skills Item -->
+ 
+
+
           </div>
 
 
@@ -240,6 +253,15 @@
               <span class="skill"><span>Symfony</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            
+             <div class="progress">
+              <span class="skill"><span>Jetpack Compose</span> <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div><!-- End Skills Item -->
