--- a/parcour.html
+++ b/parcour.html
@@ -113,7 +113,7 @@
             <div class="resume-item">
               <h4>BTS SIO SLAM </h4>
               <h5>2023 - 2025</h5>
-              <p><em>LYCÉE POLYVALENT NORD BOIS DE NÈFLES , Saint-Clotilde , La Réunion</em></p>
+              <p><em>LYCÉE NELSON MANDELA , Saint-Benoît , La Réunion</em></p>
 
             </div><!-- Edn Resume Item -->
 
