--- a/parcour.html
+++ b/parcour.html
@@ -100,7 +100,7 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Parcours</h2>
+          <h2>PARCOURS</h2>
           <div><span>Mon</span> <span class="description-title">parcours</span></div>
         </div><!-- End Section Title -->
 
