upgrade my porfolio

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>MOUTANIN LUC</h2>
         <p>Je suis <span class="typed" data-typed-items=" 
-          DÉVELOPPEUR EN FORMATION BAC+4 – CDA.,
+          ÉTUDIANT EN PRÉ-MSc À EPITECH – PASSIONNÉ PAR LE DÉVELOPPEMENT WEB ET LOGICIEL.,
           DIPLÔMÉ DU BTS SIO OPTION SLAM.,
-          PASSIONNÉ PAR LE DÉVELOPPEMENT WEB ET LOGICIEL.,
-          EN RECHERCHE D’UNE ALTERNANCE DÈS OCTOBRE 2025.,
-          CURIEUX, RIGOUREUX ET PRÊT À CONTRIBUER À DES PROJETS CONCRETS.
-
+          COMPÉTENT EN JAVA, JAVASCRIPT, PYTHON ET SQL.,
+          EN RECHERCHE D’UNE ALTERNANCE DÈS JANVIER 2026.,
+          CURIEUX, RIGOUREUX ET MOTIVÉ POUR CONTRIBUER À DES PROJETS CONCRETS.
 
           
           "></span><span class="typed-cursor typed-cursor--blink"></span></p>
