--- a/profil.html
+++ b/profil.html
@@ -107,29 +107,24 @@
             <div class="col-lg-8 content">
 
               <p class="fst-italic py-3">
-                Je m'appelle Luc MOUTANIN, développeur en devenir, passionné par la création de solutions web et
-                logicielles.
+                Je m’appelle Luc MOUTANIN, étudiant à Epitech et passionné par la création de solutions web et
+                logicielles. Diplômé d’un BTS SIO – option SLAM, j’ai appris à transformer des idées en applications
+                utiles, performantes et bien structurées.
 
-                Diplômé d’un BTS SIO – spécialité SLAM, j’ai appris à transformer des idées en applications utiles,
-                performantes et bien structurées.
+                Actuellement en formation à Epitech, je suis à la recherche d’une alternance à partir de janvier 2026
+                pour mettre mes compétences au service d’une entreprise ambitieuse, apprendre de ses méthodes et
+                contribuer concrètement à ses projets.
 
-                Actuellement en formation Concepteur Développeur d’Applications (Bac+4), je suis à la recherche d’une
-                alternance à partir de octobre 2025.
-
-                Mon objectif : mettre mes compétences au service d’une entreprise ambitieuse, apprendre de ses méthodes,
-                et contribuer concrètement à ses projets.
-
-                Curieux, rigoureux et impliqué, je vois chaque ligne de code comme une opportunité d’apprendre,
-                d’innover et de progresser.
-
-                À travers ce portfolio, je vous invite à découvrir mon parcours, mes projets et ma vision du métier de
-                développeur.
+                Curieux, rigoureux et impliqué, je considère chaque ligne de code comme une opportunité d’apprendre,
+                d’innover et de progresser. À travers ce portfolio, je vous invite à découvrir mon parcours, mes projets
+                et ma vision du métier de développeur.
               </p>
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Spécialité:</strong> <span> Développement Informatique
-                         </span>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Spécialité:</strong> <span> Développement
+                        Informatique
+                      </span>
                     </li>
                     <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span><a
                           href="https://github.com/lmoutanin"> lmoutanin</a></span></li>
@@ -144,7 +139,7 @@
 
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>luc.moutanin@gmail.com</span>
                     </li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Niveau d’études</strong> <span>  BTS SIO –
+                    <li><i class="bi bi-chevron-right"></i> <strong>Niveau d’études</strong> <span> BTS SIO –
                         option SLAM</span></li>
                   </ul>
                 </div>
@@ -214,7 +209,7 @@
                 </div>
               </div>
             </div><!-- End Skills Item -->
- 
+
 
 
           </div>
@@ -257,8 +252,8 @@
               </div>
             </div><!-- End Skills Item -->
 
-            
-             <div class="progress">
+
+            <div class="progress">
               <span class="skill"><span>Jetpack Compose</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
